Ajuste das margens

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   font-size: 26px;
   color: #ff3399;
   background-color: rgba(255, 240, 250, 0.85);
-  padding: 12px 24px;
+  padding: 16px 64px;
   border-radius: 25px;
   text-shadow: 0 0 10px #ffccf2, 0 0 20px #ff99cc;
 }
@@ -63,7 +63,7 @@ body {
   max-width: 90%;
   max-height: 65%;
   border-radius: 15px;
-  opacity: 1; /* para garantir que esteja visível */
+  transition: opacity 2s; 
 }
 
 .heart {
@@ -115,7 +115,8 @@ body {
   align-items: center;
   justify-content: flex-start;
   height: 100vh;
-  padding-top: 100px;
+  padding-top: 40px;
+  margin-bottom: 20px;
   text-align: center;
   gap: 20px;
   z-index: 10;
